qt-codes-advantech/WRY-Fixed-Errors/Fix_Counter_UpDownCounter-errors.txt
// FILE: Fix_Counter_UpDownCounter-errors.txt
// DATE: Thu 04 May 2023 04:26:03 PM +08
// USING QT5 in QtCreator

COUNTER_UPDOWNCOUNTER FOR PCIE-1884 ADVANTECH CARD

=====================================================================
// ERROR NO 01
// INSIDE configuredialog.h  LINE 5
#include <bdaqctrl.h>
// #include "../../../inc/bdaqctrl.h"

// ERROR NO 02
// INSIDE updowncounter.h LINE 15
//	UpDownCounter(QWidget *parent = 0, Qt::WindowFlags flags = 0);
    UpDownCounter(QWidget *parent = 0, Qt::WindowFlags flags = Qt::WindowFlags());

// ERROR NO 03
// INSIDE configuredialog.cpp LINE 75
        str.asprintf("Error:the error code is 0x%x\n\
						The %s is busy or not exit in computer now.\n\
                        Select other device please!", errorCode, des.toUtf8().data());

// ERROR NO 04
/home/wruslan/WRY-pcie1884-qt5/Qt/DI_DIInterrupt/configuredialog.cpp:140: error: invalid conversion from ‘int’ to ‘Qt::WindowType’ [-fpermissive]
../DI_DIInterrupt/configuredialog.cpp: In member function ‘void ConfigureDialog::DeviceChanged(int)’:
../DI_DIInterrupt/configuredialog.cpp:140:43: error: invalid conversion from ‘int’ to ‘Qt::WindowType’ [-fpermissive]
  140 |         m_portPanel[i] = new DioPortUI(0, 0, portIndexes[i], ports[portIndexes[i]], images);
      |                                           ^
      |                                           |
      |                                           int
// SOLUTION FOR ERROR NO 04
// ERROR NO 4
     // m_portPanel[i] = new DioPortUI(0, 0, portIndexes[i], ports[portIndexes[i]], images);
        m_portPanel[i] = new DioPortUI(0, Qt::WindowFlags(), portIndexes[i], ports[portIndexes[i]], images);


// ERROR NO 05 // SOLUTION
// INSIDE updowncounter.cpp JUST ADD HEADER BELOW

#include <QButtonGroup>

 

REFERENCES:   
===================================================   
https://doc.qt.io/qt-6/qvboxlayout.html      
https://doc.qt.io/qt-5/qbuttongroup.html
https://doc.qt.io/qt-6/qbuttongroup.html#details

=====================================================================
SUCCESS COMPILATION

20:43:37: Running steps for project Counter_UpDownCounter...
20:43:37: Configuration unchanged, skipping qmake step.
20:43:37: Starting: "/usr/bin/make" -j8
/usr/bin/make -f Makefile.Debug
make[1]: Entering directory '/home/wruslan/WRY-pcie1884-qt5/Qt/build-Counter_UpDownCounter-Desktop-Debug'
make[1]: Nothing to be done for 'first'.
make[1]: Leaving directory '/home/wruslan/WRY-pcie1884-qt5/Qt/build-Counter_UpDownCounter-Desktop-Debug'
20:43:38: The process "/usr/bin/make" exited normally.
20:43:38: Elapsed time: 00:00.


EXECUTION ON THE NOTEBOOK (NO DEVICE HAHAHA)

20:43:38: Starting /home/wruslan/WRY-pcie1884-qt5/Qt/Counter_UpDownCounter/../bin/debug/Counter_UpDownCounter...
qt.core.qobject.connect: QObject::connect: No such signal QButtonGroup::buttonClicked(int) in ../Counter_UpDownCounter/updowncounter.cpp:31
qt.core.qobject.connect: QObject::connect:  (receiver name: 'UpDownCounterClass')
20:43:48: /home/wruslan/WRY-pcie1884-qt5/Qt/Counter_UpDownCounter/../bin/debug/Counter_UpDownCounter crashed.

=====================================================================
ALHAMDULILLAH 3 TIMES.
=====================================================================
